# almondbread

./: .gitignore  .pnp.cjs  README.md  index.html  package.json  pyproject.toml  tsconfig.json  vite.config.ts
mandelbrot_explorer/: __main__.py  app.py  core.py  main.py
mandelbrot_explorer/static/: styles.css  theme.yaml
src/: App.tsx
src/components/: ComplexInput.tsx  IconButton.tsx  ParameterPanel.tsx  Plot.tsx  SequencePanel.tsx  SequencePlot.tsx  Toolbar.tsx
src/styles/: app.css  index.css  parameter-panel.css  plot.css  sequence-panel.css
src/types/: index.ts
src/utils/: compute.ts  mandelbrot.ts  mandelbrot.worker.ts
