[tool.poetry]
name = "mandelbrot-explorer"
version = "0.1.0"
description = "Interactive Mandelbrot-like Sequence Explorer with Bokeh"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "mandelbrot_explorer" }
]

[tool.poetry.dependencies]
python = "^3.9"
bokeh = "^2.4.3"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[tool.poetry.scripts]
mandelbrot-explorer = "mandelbrot_explorer.app:main" 